# scholar_navis

./: .gitignore  CNAME  README.md  build_app.py  build_nuitka.py  check_icon.py  index.html  main.py  pyproject.toml  requirements.txt  scholar_navis api.lnk
.github/workflows/: build-release.yml  build-windows.yml
Assets/: icon.icns
plugins/: 123.py  academic_agent.py  academic_mcp_server.py  bio_ncbi_server.py  bio_server.py  common_server.py  mcp_client_test.py
plugins_ext/: common_server.py
src/: version.py
src/api/: api_diagnostic_tool.py  api_server.py
src/core/: __init__.py  academic_agent.py  api_server.py  config_manager.py  core_task.py  database.py  device_manager.py  email_check.py  encryption_service.py  kb_manager.py  lang_detect.py  llm_impl.py  logger.py  mcp_manager.py  model_manager.py  models_registry.py  network_worker.py  oa.py  pdf_engine.py  plugin_manager.py  rerank_engine.py  security_analyzer.py  signals.py  skill_manager.py  theme_manager.py  version.py
src/services/: file_service.py  graph_service.py
src/task/: chat_tasks.py  common_task.py  config_task.py  dialog_task.py  hf_download_task.py  kb_tasks.py  quick_translator_task.py  rss_tasks.py  s2_task.py  settings_tasks.py  startup_tasks.py
src/tools/: about_tool.py  base_tool.py  chat_tool.py  gap_miner.py  graph_tool.py  import_tool.py  log_tool.py  radar_tool.py  rss_tool.py  settings_tool.py  staging_tool.py
src/ui/: main_window.py
src/ui/components/: HoverRevealLineEdit.py  RotatingSpinner.py  chat_bubble.py  checkbox.py  combo.py  dialog.py  kb_combo.py  mermaid_viewer.py  model_selector.py  param_editor.py  pdf_viewer.py  pill_button.py  quick_translator.py  text_formatter.py  toast.py
tools/skill/: 123.enc  get_current_time.enc
web/: index.html
