[project]
name = "scholar-navis"
version = "2.0.0"
description = "Scholar Navis"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "chromadb>=1.5.0",
    "langchain-text-splitters>=1.1.0",
    "markdown>=3.10.2",
    "networkx>=3.6.1",
    "pymupdf>=1.26.7",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.10.2",
    "scikit-learn>=1.8.0",
    "psutil>=7.2.2",
    "nvidia-ml-py>=13.590.48",
    "pymupdf4llm>=0.2.9",
    "langdetect>=1.0.9",
    "mcp[cli]>=1.26.0",
    "biopython>=1.86",
    "optimum>=2.1.0",
    "curl-cffi>=0.14.0",
    "torch>=2.10.0",
    "cryptography>=46.0.5",
    "keyring>=24.0.0",
    "chardet<6.0",
    "hf-xet>=1.2.0",
    "optimum-onnx>=0.1.0",
    "onnxruntime-directml>=1.19.0 ; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.19.0 ; sys_platform == 'linux'",
    "onnxruntime>=1.19.0 ; sys_platform == 'darwin'",
    "python-docx>=1.2.0",
    "email-validator>=2.3.0",
    "disposable-email-domains>=0.0.167",
    "duckduckgo-search>=8.1.1",
    "beautifulsoup4>=4.14.3",
    "litellm>=1.82.1",
    "pyjwt>=2.12.0",
    "pywin32>=306 ; sys_platform == 'win32'",
    "pyobjc-framework-cocoa>=10.0 ; sys_platform == 'darwin'",
    "pyobjc-framework-localauthentication>=10.0 ; sys_platform == 'darwin'",
    "secretstorage>=3.3.0 ; sys_platform == 'linux'",
    "jeepney>=0.6.0 ; sys_platform == 'linux'",
]


[dependency-groups]
dev = [
    "boto3>=1.42.62",
    "pyinstaller>=6.19.0",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }


